[package]
name = "mini_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
reqwest = "0.11"
serde = "1.0.188"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.17"

volo-gen = { path = "../hw5/volo-gen" }
hw5 = { path = "../hw5" }
tracing = "0.1.37"
once_cell = "1.18.0"
lazy_static = "1.4.0"
faststr = "0.2.11"
axum-macros = "0.3.8"

openssl = {version = "0.10", features = ["vendored"]}